# check-exe-sum

./: README.md  pyproject.toml  test.py
exe_check/: cli.py  config.py  packing.py  util.py
