[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "pefile",
]
name = "exe_check"
version = "0.1"
dynamic = ["readme"]

[project.scripts]
exe-check = "exe_check.cli:main"

[tool.setuptools]
packages = ["exe_check"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/plain"}
